<resources>
    <string name="app_name">Tutor</string>
    <string name="tutor_logo_holder">Tutor Logo Holder</string>
    <string name="finals">Finals</string>
    <string name="finals_practice">Finals Practice</string>
    <string name="mock_practice">Mock Practice</string>
    <string name="mock">Mock</string>
    <string name="title_activity_nav_drawer_screen">NavDrawerScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about_us">About Us</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_share">Share</string>

    <!--Nav Drawer Elements-->
    <string name="menu_home">Home</string>
    <string name="menu_category">Scoreboard</string>
    <string name="how_to_play">How to Play</string>
    <string name="play">Play</string>
    <string name="communication">Communication</string>
    <string name="my_account">My Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="category_name">Category Name</string>
    <string name="score_board">Scoreboard</string>
    <string name="number_of_quizzes">Number of Quizzes</string>
    <string name="notifications">notifications</string>
    <string name="grade_9">Grade - 9</string>
    <string name="android_studio">Android Studio</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full name</string>
    <string name="creating_account">Creating Account</string>
    <string name="logging_in">Logging in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="google_logo">google_logo</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="mark_for_review">Review</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="questions">Questions</string>
    <string name="best_score">Best Score</string>
    <string name="time">Time</string>
    <string name="_5">5</string>
    <string name="_25_mins">25 mins</string>
    <string name="score_0">Score: 0</string>
    <string name="icon">icon</string>
    <string name="option_a">Option A</string>
    <string name="question_no_1">Question No. 1</string>
    <string name="option_d">Option D</string>
    <string name="option_c">Option C</string>
    <string name="option_b">Option B</string>
    <string name="_1_20">1/20</string>
    <string name="_30_00min">30:00min</string>
    <string name="submit">Submit</string>
    <string name="coming_soon">COMING SOON....</string>
    <string name="total_questions">Questions</string>
    <string name="difficulty_level">Level:</string>
    <string name="back_button">back_button</string>
    <string name="start">START</string>
    <string name="choose_difficulty_level">Choose difficulty level</string>
    <string name="choose_category">Choose Category</string>
    <string name="high_score">High score:</string>
    <string name="send_us_feedback">Send us your feedback</string>
    <string name="version">Version 1.0</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="managed_by">Designed and Developed by Year 3 BSE Students</string>
    <string name="about_the_app">About the App</string>
    <string name="app_overview">Tutor is a Quiz app designed to help Grade 9 Pupils to Practice for their Exams whilst having fun in the process</string>
    <string name="email_us">email us</string>
    <string name="phone">XXXXXXXXXXXX</string>
    <string name="logout">Log out</string>
    <string name="photo">photo</string>
    <string name="instruction_one">1. Pick the subject and difficulty level of your choice</string>
    <string name="instruction_two">2. The quiz automatically begins when your press the start button which automatically starts the timer</string>
    <string name="instruction_three">3. Read the question carefully then select an answer from the list provided. Once selected, confirm your answer and then submit it, this takes you to the next question in that subject.</string>
    <string name="instruction_four">4. Keep answering the questions and observing your score. Try your best to answer the questions in the allocated time</string>
    <string name="instruction_five">5. Have fun and learn!!!</string>
</resources>
