<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_how_to_play"
            android:icon="@drawable/ic_how_to_play"
            android:title="@string/how_to_play"/>
    </group>

    <group
        android:checkableBehavior="single">
        <item android:title="@string/communication">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/action_settings" />
                <item
                    android:id="@+id/nav_feedbacck"
                    android:icon="@drawable/ic_feedback"
                    android:title="@string/action_feedback"/>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/action_share"/>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about_us"
                    android:title="@string/action_about_us" />
            </menu>
        </item>
    </group>

</menu>
