<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:checkableBehavior="single">
        <item android:title="@string/communication">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/action_settings" />
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_feedback"
                    android:title="@string/action_feedback"/>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/action_share"/>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about_us"
                    android:title="@string/action_about_us" />
            </menu>
        </item>
    </group>

</menu>