<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.howToPlay.HowToPlayActivity">

    <LinearLayout
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/blue" />

    </LinearLayout>

    <TextView
        android:id="@+id/instruction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:text="@string/how_to_play"
        android:textSize="16sp"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/instruction_one"
            android:textAlignment="center"
            android:textColor="#0277BD"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/instruction_two"
            android:textColor="#0277BD"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/instruction_three"
            android:textColor="#0277BD"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/instruction_four"
            android:textColor="#0277BD"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/instruction_five"
            android:textAlignment="center"
            android:textColor="#0277BD"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>