<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.community.AboutUsActivity">

    <LinearLayout
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/blue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_app_layout"
        android:layout_width="399dp"
        android:layout_height="223dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/about_the_app"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/app_overview"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_us_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_app_layout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_mail"
            android:contentDescription="@string/email_us" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:text="@string/send_us_feedback"
            android:padding="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacy_policy_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_us_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_rights_reserved"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/managed_by"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>