<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:gravity="center"
        android:textColor="@color/color_black_900_alpha_7"
        android:textSize="18sp"
        android:text="@string/question_no_1"
        android:textStyle="bold"
        android:scrollbars="vertical"
        android:background="@color/white"
        android:inputType="textMultiLine"
        android:elevation="5dp"
        android:translationZ="3dp"
        android:layout_weight="1"
        tools:ignore="TextViewEdits" />
    
    <Button
        android:id="@+id/option_A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/color_black_900_alpha_7"
        android:text="@string/option_a"
        android:textSize="16sp"
        android:background="@drawable/unselected_button"
        android:elevation="3dp"
        android:stateListAnimator="@null"/>

    <Button
        android:id="@+id/option_B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/color_black_900_alpha_7"
        android:text="@string/option_b"
        android:textSize="16sp"
        android:background="@drawable/unselected_button"
        android:elevation="3dp"
        android:stateListAnimator="@null"/>

    <Button
        android:id="@+id/option_C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/color_black_900_alpha_7"
        android:text="@string/option_c"
        android:textSize="16sp"
        android:background="@drawable/unselected_button"
        android:elevation="3dp"
        android:stateListAnimator="@null"/>

    <Button
        android:id="@+id/option_D"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/color_black_900_alpha_7"
        android:text="@string/option_d"
        android:textSize="16sp"
        android:background="@drawable/unselected_button"
        android:elevation="3dp"
        android:stateListAnimator="@null"/>

</LinearLayout>