<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".home.ui.login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="117dp"
        android:src="@drawable/tutor_logo"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="328dp"
        android:layout_height="62dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="16dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/login"
        style="@style/Widget.AppTheme.Button.OutlinedButton"
        android:layout_width="332dp"
        android:layout_height="65dp"
        android:layout_gravity="start"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/dont_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="172dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="173dp"
        android:layout_height="34dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="144dp"
        android:padding="3dp"
        android:text="@string/dont_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="78dp"
        android:layout_height="34dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="130dp"
        android:padding="5dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dont_have_account"
        app:layout_constraintTop_toBottomOf="@+id/login" />

</androidx.constraintlayout.widget.ConstraintLayout>