<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="bottom"
    android:background="@color/purple_200"
    android:layout_width="match_parent"
    android:layout_height="220dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:src="@drawable/tutor_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="167dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textStyle="bold"
        android:textColor="#311B92"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="#311B92" />

</LinearLayout>
