<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    tools:context="com.example.tutor.ui.category.CategoryFragment">

    <ImageView
        android:id="@+id/start_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start"
        android:src="@drawable/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/white2"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/start_image"
        app:layout_constraintEnd_toEndOf="@+id/start_image"
        app:layout_constraintStart_toStartOf="@+id/start_image"
        app:layout_constraintTop_toTopOf="@+id/start_image" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="232dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_spinner"
        android:contentDescription="@string/choose_category"
        android:dropDownVerticalOffset="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_image" />

    <Spinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="232dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_spinner"
        android:contentDescription="@string/choose_difficulty_level"
        android:dropDownVerticalOffset="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_category" />

</androidx.constraintlayout.widget.ConstraintLayout>